# votetracker

./: .gitignore  CLAUDE.md  LICENSE  PKGBUILD  PKGBUILD-axios  README.md  RELEASE_NOTES_2.7.1.md  VoteTracker.spec  WINDOWS_OPTIMIZATION.md  axios_login_debug.html  axios_registrofamiglie_login.html  build.py  index.html  install.sh  package-lock.json  package.json  pyproject.toml  run.py  tsconfig.json  uninstall.sh  vite.config.ts
.github/workflows/: build.yml  test.yml
docs/: AUR_BIN_PUBLISHING_GUIDE.md  PKGBUILD.aur-bin  README.md  REWRITE_SPEC.md
legacy-python/: .coveragerc  CLAUDE.md  pyproject.toml
legacy-python/docs/: AUR_PUBLISHING_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md
legacy-python/scripts/: build.py  votetracker.desktop
legacy-python/scripts/pkg/votetracker/: .BUILDINFO  .INSTALL  .MTREE  .PKGINFO
legacy-python/src/votetracker/: __init__.py  __main__.py  classeviva.py  database.py  i18n.py  icon_provider.py  mainwindow.py  subject_matcher.py
legacy-python/src/votetracker/pages/: calendar.py  dashboard.py  subjects.py  votes.py
legacy-python/src/votetracker/providers/: __init__.py
scripts/: PKGBUILD  PKGBUILD.aur  build.py  install.sh  votetracker.desktop  votetracker.install
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  events.rs  i18n.rs  lib.rs  main.rs  menu.rs
src-tauri/src/db/: mod.rs  schema.rs  school_years.rs  settings.rs  subjects.rs  votes.rs
src-tauri/src/domain/: average.rs  mod.rs  rounding.rs  simulator.rs  subject_match.rs  types.rs
src-tauri/src/pdf/: mod.rs  report_card.rs
src-tauri/src/sync/: axios.rs  axios_decode.rs  classeviva.rs  import.rs  mod.rs
src-tauri/src/undo/: mod.rs
src/components/: CommandPalette.scss  CommandPalette.tsx  Sidebar.scss  Sidebar.tsx  Toast.scss  Toast.tsx  TopBar.scss  TopBar.tsx
src/components/dialogs/: AddSubjectDialog.tsx  AddVoteDialog.tsx  ShortcutsHelpDialog.scss  ShortcutsHelpDialog.tsx  SubjectMappingDialog.scss  SubjectMappingDialog.tsx
src/components/primitives/: Button.scss  Button.tsx  ConfirmDialog.scss  ConfirmDialog.tsx  Field.scss  Field.tsx  Icon.scss  Icon.tsx  Modal.scss  Modal.tsx
src/lib/: format.ts  ipc.ts  store.ts  types.ts
src/lib/hooks/: useCommandPalette.ts  useDataRefresh.ts  useGlobalActions.ts  useMenuEvents.ts  useShortcuts.ts  useToast.ts
src/lib/i18n/: en.ts  index.ts  it.ts
src/pages/: Calendar.scss  Calendar.tsx  Dashboard.scss  Dashboard.tsx  Onboarding.scss  Onboarding.tsx  ReportCard.scss  ReportCard.tsx  Settings.scss  Settings.tsx  Simulator.scss  Simulator.tsx  Statistics.scss  Statistics.tsx  Subjects.scss  Subjects.tsx  Votes.scss  Votes.tsx
src/styles/: _subject-cards.scss  app.scss
src/theme/: ThemeProvider.tsx  global.scss  tokens.scss
src/votetracker/: __init__.py  __main__.py  classeviva.py  constants.py  database.py  db_schema.py  dialogs.py  enhanced_charts.py  i18n.py  icon_provider.py  mainwindow.py  styles.py  subject_matcher.py  sync_provider.py  undo.py  utils.py  widgets.py  windows_style.py
src/votetracker/pages/: __init__.py  dashboard.py  report_card.py  settings.py  simulator.py  statistics.py
src/votetracker/providers/: __init__.py  axios_provider.py  classeviva_provider.py
tests/: mock_axios.py  test_axios_provider.py  test_database.py  test_utils.py
votetracker/: __init__.py  database.py  dialogs.py  i18n.py  mainwindow.py  undo.py  utils.py  widgets.py
votetracker/pages/: __init__.py  calendar.py  dashboard.py  report_card.py  settings.py  simulator.py  statistics.py  subjects.py  votes.py
