[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "votetracker"
version = "2.7.1"
description = "School grade management application"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "VoteTracker"}
]
keywords = ["school", "grades", "education", "qt", "pyside6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "PySide6>=6.4.0",
    "reportlab>=4.0.0",
    "requests>=2.31.0",
]

[project.scripts]
votetracker = "votetracker.__main__:main"

[project.gui-scripts]
votetracker-gui = "votetracker.__main__:main"

[project.urls]
Homepage = "https://github.com/mambucodev/votetracker"

[tool.setuptools.packages.find]
where = ["src"]
include = ["votetracker*"]
