[package]
name = "votetracker"
version = "3.0.0"
description = "School grade management application"
authors = ["VoteTracker"]
license = "MIT"
repository = "https://github.com/mambucodev/votetracker"
edition = "2021"
rust-version = "1.77"

[lib]
name = "votetracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"

# DB
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Async / HTTP
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
scraper = "0.20"
async-trait = "0.1"

# Serde / utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PDF (Italian report card export)
printpdf = "0.7"

# Fuzzy (used by subject matcher in some paths)
once_cell = "1"

[features]
# This feature is used for production builds. It should not be enabled with `tauri dev`.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
